--- a/reset.css
+++ b/reset.css
@@ -1,6 +1,4 @@
-/* http://meyerweb.com/eric/tools/css/reset/ 
-   v2.0 | 20110126
-   License: none (public domain)
+/* Catarina Lopes Barbosa de Jesus 2D 19/11/24
 */
 
 html,
